Removes the glitch with jumping navbar when scrolling through carousel http://stackoverflow.com/questions/29288804/bootstrap-fixed-navigation-jumps-when-scrolling

--- a/MvcEssentials/Web/MvcEssentials.Web/Content/Site.css
+++ b/MvcEssentials/Web/MvcEssentials.Web/Content/Site.css
@@ -29,3 +29,7 @@ textarea {
 .carousel-caption {
     background: rgba(0, 0, 0, 0.35);
 }
+
+.navbar-fixed-top  {
+     -webkit-backface-visibility: hidden;
+}
